src/test/deca/syntax/parser/invalid/class_definition_with_symbole.deca
// Test parser, déclaration d'une classe avec un symbole spécial

class ! {
    
}